Prevent to going back to login form for Log in users. Closes #9

--- a/src/main/resources/templates/post/postsForm.html
+++ b/src/main/resources/templates/post/postsForm.html
@@ -46,6 +46,7 @@
 
     <div class="container">
         <div class="jumbotron">
+            <!--/*@thymesVar id="post" type="Falcon.Persist.Post"*/-->
             <form method="post" action="#" th:object="${post}" th:action="@{/creator}">
 
                 <p th:if="${exist} == true" th:text="'Post already exist please reload the page'">Error message</p>
