--- a/src/main/resources/templates/home/index.html
+++ b/src/main/resources/templates/home/index.html
@@ -4,9 +4,15 @@
 
 <head>
     <title>Posts</title>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"
+          th:href="@{/webjars/bootstrap/4.3.1/css/bootstrap.min.css} ">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+
+    </script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="index.css">
 </head>
@@ -22,59 +28,57 @@
         <br/><br/>
     </div>
 
-            <div class="row justify-content-md-center">
-                <div class="col-md-4">
-                    <div class="panel panel-default">
-                        <h1 class="text-center">Login</h1>
-                        <br/><br/>
-                        <div class="panel-body col-12">
-                            <p th:if="${loginError}" class="error">Wrong user or password</p>
+    <div class="row justify-content-md-center">
+        <div class="col-md-4">
+            <div class="panel panel-default">
+                <h1 class="text-center">Login</h1>
+                <br/><br/>
+                <div class="panel-body col-12">
+                    <p th:if="${loginError}" class="error">Wrong user or password</p>
 
-                          <!-- <form method="post" action="#" th:object="${user}" th:action="@{/login}">-->
+                    <!-- <form method="post" action="#" th:object="${user}" th:action="@{/login}">-->
 
-                            <form method="post" action="#" th:object="${user}" th:action="@{/login}">
+                    <form method="post" action="#" th:object="${user}" th:action="@{/login}">
 
 
+                        <div class="form-group">
 
-                            <div class="form-group">
-
-                                <i class="fa fa-user icons"></i>
-                                <input class="form-control" type="text" name="login" id="login" placeholder="Your Login..." th:field="*{username}">
-                                <p th:if="${#fields.hasErrors('username')}" th:errors="*{username}">Name Error</p>
-                            </div>
-                            <br/>
-
-                            <div class="form-group">
-                                <i class="fa fa-lock icons"></i>
-                                <input class="form-control" type="password" id="password" name="password" placeholder="Your Password..." th:field="*{password}">
-                                <p th:if="${#fields.hasErrors('password')}" th:errors="*{password}">Name Error</p>
-                            </div>
-                            <br/>
-
-                            <div class="form-group text-center">
-                                <input class="btn btn-outline-success" type="submit" value="Login">
-                            </div>
-
-                            </form>
-
+                            <i class="fa fa-user icons"></i>
+                            <input class="form-control" type="text" name="login" id="login" placeholder="Your Login..."
+                                   th:field="*{username}">
+                            <p th:if="${#fields.hasErrors('username')}" th:errors="*{username}">Name Error</p>
                         </div>
-                    </div>
+                        <br/>
+
+                        <div class="form-group">
+                            <i class="fa fa-lock icons"></i>
+                            <input class="form-control" type="password" id="password" name="password"
+                                   placeholder="Your Password..." th:field="*{password}">
+                            <p th:if="${#fields.hasErrors('password')}" th:errors="*{password}">Name Error</p>
+                        </div>
+                        <br/>
+
+                        <div class="form-group text-center">
+                            <input class="btn btn-outline-success" type="submit" value="Login">
+                        </div>
+
+                    </form>
+
                 </div>
             </div>
+        </div>
+    </div>
 
     <br/><br/>
     <div class="register d-inline text-center">
-             <h2>You don't have account? Click here for register </h2>
-            <div class="col-12">
-             <a th:href="@{/registration}" class="btn btn-outline-success" role="button">Add Account</a>
-            </div>
+        <h2>You don't have account? Click here for register </h2>
+        <div class="col-12">
+            <a th:href="@{/registration}" class="btn btn-outline-success" role="button">Add Account</a>
+        </div>
     </div>
-<br/><br/><br/>
- </div>
+    <br/><br/><br/>
+</div>
 
 
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </body>
 </html>
