--- a/src/main/resources/templates/post/postsForm.html
+++ b/src/main/resources/templates/post/postsForm.html
@@ -4,78 +4,80 @@
 
 <head>
     <title>Post Form</title>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"
+          th:href="@{/webjars/bootstrap/4.3.1/css/bootstrap.min.css} ">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+
+    </script>
 
 </head>
 
 <body>
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainMenu" aria-controls="mainMenu" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainMenu" aria-controls="mainMenu"
+            aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
 
-<div class="collapse navbar-collapse" id="mainMenu">
-    <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-        <li class="nav-item">
-            <a class="nav-link" th:href="@{/posts}">Posts</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link active"  th:href="@{/creator}">Add post</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link"  th:href="@{/user/panel/} + ${userId}">User panel</a>
-        </li>
-    </ul>
+    <div class="collapse navbar-collapse" id="mainMenu">
+        <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+            <li class="nav-item">
+                <a class="nav-link" th:href="@{/posts}">Posts</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link active" th:href="@{/creator}">Add post</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" th:href="@{/user/panel/} + ${userId}">User panel</a>
+            </li>
+        </ul>
 
 
+        <ul class="navbar-nav my-2 my-lg-0">
+            <li class="nav-item">
+                <label class="nav-link" th:text="'Hello ' + ${username}"></label>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" th:href="@{/logout}">Log out</a>
+            </li>
+        </ul>
 
-    <ul class="navbar-nav my-2 my-lg-0">
-        <li class="nav-item">
-            <label  class="nav-link" th:text="'Hello ' + ${username}"></label>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link"  th:href="@{/logout}">Log out</a>
-        </li>
-    </ul>
-
-</div>
+    </div>
 </nav>
 
-    <div class="container">
-        <div class="jumbotron">
-            <!--/*@thymesVar id="post" type="Falcon.Persist.Post"*/-->
-            <form method="post" action="#" th:object="${post}" th:action="@{/creator}">
+<div class="container">
+    <div class="jumbotron">
+        <!--/*@thymesVar id="post" type="Falcon.Persist.Post"*/-->
+        <form method="post" action="#" th:object="${post}" th:action="@{/creator}">
 
-                <p th:if="${exist} == true" th:text="'Post already exist please reload the page'">Error message</p>
+            <p th:if="${exist} == true" th:text="'Post already exist please reload the page'">Error message</p>
 
-                <div class="form-group">
-                    <label for="postTitle">Title</label>
-                    <input type="text" class="form-control" id="postTitle" placeholder="Enter title" th:field="*{title}">
-                    <p th:if="${#fields.hasErrors('title')}" th:errors="*{title}">Name of Error</p>
-                </div>
+            <div class="form-group">
+                <label for="postTitle">Title</label>
+                <input type="text" class="form-control" id="postTitle" placeholder="Enter title" th:field="*{title}">
+                <p th:if="${#fields.hasErrors('title')}" th:errors="*{title}">Name of Error</p>
+            </div>
 
-                <div class="form-group">
-                    <label for="postContent">Text</label>
-                    <textarea class="form-control" rows="5" id="postContent" th:field="*{content}">
+            <div class="form-group">
+                <label for="postContent">Text</label>
+                <textarea class="form-control" rows="5" id="postContent" th:field="*{content}">
                     </textarea>
-                    <p th:if="${#fields.hasErrors('content')}" th:errors="*{content}">Name of Error</p>
-                </div>
+                <p th:if="${#fields.hasErrors('content')}" th:errors="*{content}">Name of Error</p>
+            </div>
 
-                <input type="submit" value="Submit" class="btn btn-primary"/>
+            <input type="submit" value="Submit" class="btn btn-primary"/>
 
-            </form>
-         </div>
-     </div>
-
-
-     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-
- </body>
+        </form>
+    </div>
+</div>
 
 
- </html>
+</body>
+
+
+</html>
