--- a/src/main/resources/templates/post/tagsForm.html
+++ b/src/main/resources/templates/post/tagsForm.html
@@ -4,14 +4,20 @@
 
 <head>
     <title>Tags Form</title>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"
+          th:href="@{/webjars/bootstrap/4.3.1/css/bootstrap.min.css} ">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
 
+    </script>
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainMenu" aria-controls="mainMenu" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainMenu" aria-controls="mainMenu"
+            aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
 
@@ -21,21 +27,20 @@
                 <a class="nav-link" th:href="@{/posts}">Posts</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link active"  th:href="@{/creator}">Add post</a>
+                <a class="nav-link active" th:href="@{/creator}">Add post</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link"  th:href="@{/user/panel/} + ${userId}">User panel</a>
+                <a class="nav-link" th:href="@{/user/panel/} + ${userId}">User panel</a>
             </li>
         </ul>
 
 
-
         <ul class="navbar-nav my-2 my-lg-0">
             <li class="nav-item">
-                <label  class="nav-link" th:text="'Hello ' + ${username}"></label>
+                <label class="nav-link" th:text="'Hello ' + ${username}"></label>
             </li>
             <li class="nav-item">
-                <a class="nav-link"  th:href="@{/logout}">Log out</a>
+                <a class="nav-link" th:href="@{/logout}">Log out</a>
             </li>
         </ul>
 
