--- a/src/main/resources/templates/user/registerPage.html
+++ b/src/main/resources/templates/user/registerPage.html
@@ -4,9 +4,15 @@
 
 <head>
     <title>Posts</title>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"
+          th:href="@{/webjars/bootstrap/4.3.1/css/bootstrap.min.css} ">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+
+    </script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="register.css">
 </head>
@@ -15,72 +21,70 @@
 
 <div class="container">
 
-        <h1 class="text-center">To create an account you need to field in this form</h1>
-        <br/>
+    <h1 class="text-center">To create an account you need to field in this form</h1>
+    <br/>
 
-        <div class="row">
-            <!-- Grid column -->
-           <!-- <div class="col-md-6 mb-4">-->
+    <div class="row">
+        <!-- Grid column -->
+        <!-- <div class="col-md-6 mb-4">-->
 
-                    <div class="panel panel-body col-12">
-                        <!-- Form register -->
-                        <!--/*@thymesVar id="post" type="Falcon.Model.UserDTO"*/-->
-                        <form  method="post" action="#" th:object="${userDTO}" th:action="@{/registration}">
-                            <h2 class="text-center font-up font-bold ">Sign up</h2>
-                            <br/>
+        <div class="panel panel-body col-12">
+            <!-- Form register -->
+            <!--/*@thymesVar id="post" type="Falcon.Model.UserDTO"*/-->
+            <form method="post" action="#" th:object="${userDTO}" th:action="@{/registration}">
+                <h2 class="text-center font-up font-bold ">Sign up</h2>
+                <br/>
 
-                            <div class="form-group label-control form-inline">
+                <div class="form-group label-control form-inline">
 
-                                <i class="fa fa-user icons col-1"></i>
-                                <label for="nick" class="col-4">Your name</label>
-                                <input type="text" id="nick" class="form-control col-7" th:field="*{username}">
-                                <span class="text-danger" th:if="${#fields.hasErrors('username')}" th:errors="*{username}"></span>
-                                <span class="text-danger" th:if="${userExist}" th:text="'User already exist'"></span>
+                    <i class="fa fa-user icons col-1"></i>
+                    <label for="nick" class="col-4">Your name</label>
+                    <input type="text" id="nick" class="form-control col-7" th:field="*{username}">
+                    <span class="text-danger" th:if="${#fields.hasErrors('username')}" th:errors="*{username}"></span>
+                    <span class="text-danger" th:if="${userExist}" th:text="'User already exist'"></span>
 
-                            </div>
-                            <br/>
+                </div>
+                <br/>
 
-                            <div class="form-group label-control form-inline">
-                                <i class="fa fa-envelope icons col-1"></i>
-                                <label for="email" class="col-4">Your email</label>
-                                <input type="text" id="email" class="form-control col-7" th:field="*{email}">
-                                <span class="text-danger" th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></span>
-                                <span class="text-danger" th:if="${emailExist}" th:text="'Email already exist'"></span>
+                <div class="form-group label-control form-inline">
+                    <i class="fa fa-envelope icons col-1"></i>
+                    <label for="email" class="col-4">Your email</label>
+                    <input type="text" id="email" class="form-control col-7" th:field="*{email}">
+                    <span class="text-danger" th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></span>
+                    <span class="text-danger" th:if="${emailExist}" th:text="'Email already exist'"></span>
 
-                            </div>
-                            <br/>
+                </div>
+                <br/>
 
-                            <div class="form-group label-control form-inline">
-                                <i class="fa fa-lock icons col-1"></i>
-                                <label for="password" class="col-4">Your password</label>
-                                <input type="password" id="password" class="form-control col-7" th:field="*{password}">
-                                <span class="text-danger" th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></span>
-                            </div>
-                            <br/>
+                <div class="form-group label-control form-inline">
+                    <i class="fa fa-lock icons col-1"></i>
+                    <label for="password" class="col-4">Your password</label>
+                    <input type="password" id="password" class="form-control col-7" th:field="*{password}">
+                    <span class="text-danger" th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></span>
+                </div>
+                <br/>
 
-                           <!-- <div class="form-group label-control form-inline">
-                                <i class="fa fa-lock icons col-1"></i>
-                                <label for="password" class="col-4">Confirm password</label>
-                                <input type="password" id="password2" class="form-control col-7" th:field="*{password}">
-                            </div>
-                            <br/>-->
+                <!-- <div class="form-group label-control form-inline">
+                     <i class="fa fa-lock icons col-1"></i>
+                     <label for="password" class="col-4">Confirm password</label>
+                     <input type="password" id="password2" class="form-control col-7" th:field="*{password}">
+                 </div>
+                 <br/>-->
 
-                            <div class="text-center">
-                                <input class="btn btn-outline-success" type="submit" value="REGISTER">
-                            </div>
-                        </form>
-                        <!-- Form register -->
-                    </div>
-           <!-- </div>-->
+                <div class="text-center">
+                    <input class="btn btn-outline-success" type="submit" value="REGISTER">
+                </div>
+            </form>
+            <!-- Form register -->
+        </div>
+        <!-- </div>-->
 
 
         <br/><br/>
 
-</div>
+    </div>
 </div>
 
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+
 </body>
 </html>
