--- a/src/main/resources/templates/user/userPanel.html
+++ b/src/main/resources/templates/user/userPanel.html
@@ -17,37 +17,8 @@
 
 <body>
 
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainMenu" aria-controls="mainMenu"
-            aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
+<nav th:replace="fragments/header :: header">
 
-
-    <div class="collapse navbar-collapse" id="mainMenu">
-        <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-            <li class="nav-item">
-                <a class="nav-link" th:href="@{/posts}">Posts</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" th:href="@{/creator}">Add post</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link active" th:href="@{/user/panel/} + ${userId}">User panel</a>
-            </li>
-        </ul>
-
-
-        <ul class="navbar-nav my-2 my-lg-0">
-            <li class="nav-item">
-                <label class="nav-link" th:text="'Hello ' + ${username}"></label>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" th:href="@{/logout}">Log out</a>
-            </li>
-        </ul>
-
-    </div>
 </nav>
 
 <div class="container">
