--- a/src/main/resources/templates/post/editTags.html
+++ b/src/main/resources/templates/post/editTags.html
@@ -20,7 +20,7 @@
 
 </nav>
 
-<!--/*@thymesVar id="tags" type="Falcon.Persist.Tags"*/-->
+<!--/*@thymesVar id="tags" type="com.falcon.forum.persist.Tags"*/-->
 <div class="container">
     <div class="jumbotron">
         <form method="post" action="#" th:object="${tags}" th:action="@{/tags/creator/edit/}+${postId}">
