--- a/src/main/resources/templates/user/registerPage.html
+++ b/src/main/resources/templates/user/registerPage.html
@@ -30,7 +30,7 @@
 
         <div class="panel panel-body col-12">
             <!-- Form register -->
-            <!--/*@thymesVar id="post" type="Falcon.Model.UserDTO"*/-->
+            <!--/*@thymesVar id="post" type="com.falcon.forum.model.UserDTO"*/-->
             <form method="post" action="#" th:object="${userDTO}" th:action="@{/registration}">
                 <h2 class="text-center font-up font-bold ">Sign up</h2>
                 <br/>
